RESOLVED FIXED 190678
[GStreamer][WebRTC] Error out when simulcast is activated
https://bugs.webkit.org/show_bug.cgi?id=190678
Summary [GStreamer][WebRTC] Error out when simulcast is activated
Thibault Saunier
Reported 2018-10-17 12:19:35 PDT
[GStreamer][WebRTC] Error out when simulcast is activate
Attachments
Patch (4.50 KB, patch)
2018-10-17 12:20 PDT, Thibault Saunier
no flags
Patch (4.50 KB, patch)
2018-10-17 12:21 PDT, Thibault Saunier
no flags
Patch for landing (3.77 KB, patch)
2018-11-05 07:29 PST, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-10-17 12:20:24 PDT
Thibault Saunier
Comment 2 2018-10-17 12:21:42 PDT
WebKit Commit Bot
Comment 3 2018-11-05 06:52:32 PST
Comment on attachment 352611 [details] Patch Rejecting attachment 352611 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 352611, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=352611&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=190678&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 352611 from bug 190678. Fetching: https://bugs.webkit.org/attachment.cgi?id=352611 Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/platform/gtk/TestExpectations', u'LayoutTests/platform/wpe/TestExpectations']" exit_code: 1 ERROR: /Volumes/Data/EWS/WebKit/LayoutTests/platform/gtk/TestExpectations:3594: Duplicate or ambiguous entry lines LayoutTests/platform/gtk/TestExpectations:568 and LayoutTests/platform/gtk/TestExpectations:3594. [test/expectations] [5] Total errors found: 1 in 2 files Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/platform/gtk/TestExpectations', u'LayoutTests/platform/wpe/TestExpectations']" exit_code: 1 ERROR: /Volumes/Data/EWS/WebKit/LayoutTests/platform/gtk/TestExpectations:3594: Duplicate or ambiguous entry lines LayoutTests/platform/gtk/TestExpectations:568 and LayoutTests/platform/gtk/TestExpectations:3594. [test/expectations] [5] Total errors found: 1 in 2 files Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/platform/gtk/TestExpectations', u'LayoutTests/platform/wpe/TestExpectations']" exit_code: 1 Updating OpenSource Current branch master is up to date. ERROR: /Volumes/Data/EWS/WebKit/LayoutTests/platform/gtk/TestExpectations:3594: Duplicate or ambiguous entry lines LayoutTests/platform/gtk/TestExpectations:568 and LayoutTests/platform/gtk/TestExpectations:3594. [test/expectations] [5] Total errors found: 1 in 2 files Full output: https://webkit-queues.webkit.org/results/9864867
Thibault Saunier
Comment 4 2018-11-05 07:29:54 PST
Created attachment 353862 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-11-05 08:08:21 PST
Comment on attachment 353862 [details] Patch for landing Clearing flags on attachment: 353862 Committed r237804: <https://trac.webkit.org/changeset/237804>
WebKit Commit Bot
Comment 6 2018-11-05 08:08:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-11-05 08:09:22 PST
Note You need to log in before you can comment on or make changes to this bug.