[GStreamer][WebRTC] Error out when simulcast is activated https://bugs.webkit.org/show_bug.cgi?id=190678

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-11-05
Reviewed by Philippe Normand.

Implementing it is not for now yet.
Source/WebCore:

Tests for simulcast have been disabled as they now fail (instead of crashing).

* platform/mediastream/libwebrtc/GStreamerVideoEncoderFactory.cpp:
(WebCore::GStreamerVideoEncoder::InitEncode):

LayoutTests:

Tests for simulcast have been disabled as they now fail (instead of crashing).

* platform/gtk/TestExpectations:
* platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/206062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237804 268f45cc-cd09-0410-ab3c-d52691b4dbfc